force-app/main/default/objects/Country__mdt/fields/COU_PCK_Language__c.field-meta.xml
<CustomField>
    <fullName>COU_PCK_Language__c</fullName>
    <description>Language codes</description>
    <label>COU_PCK_Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>en_US</label>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>sv</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>zh_TW</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>da</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>fi</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>es_MX</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>hu</fullName>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>tr</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>ro</fullName>
            </value>
            <value>
                <fullName>vi</fullName>
            </value>
            <value>
                <fullName>uk</fullName>
            </value>
            <value>
                <fullName>iw</fullName>
            </value>
            <value>
                <fullName>el</fullName>
            </value>
            <value>
                <fullName>bg</fullName>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>