force-app/main/default/objects/Country__mdt/fields/COU_PCK_Locale__c.field-meta.xml
<CustomField>
    <fullName>COU_PCK_Locale__c</fullName>
    <description>Locale codes</description>
    <label>COU_PCK_Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_GB</fullName>
                <default>true</default>
                <label>en_GB</label>
            </value>
            <value>
                <fullName>es_ES</fullName>
            </value>
            <value>
                <fullName>fr_FR</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>it_IT</fullName>
            </value>
            <value>
                <fullName>de_DE</fullName>
            </value>
            <value>
                <fullName>sq_AL</fullName>
            </value>
            <value>
                <fullName>ar_DZ</fullName>
            </value>
            <value>
                <fullName>ar_BH</fullName>
            </value>
            <value>
                <fullName>ar_EG</fullName>
            </value>
            <value>
                <fullName>ar_IQ</fullName>
            </value>
            <value>
                <fullName>ar_JO</fullName>
            </value>
            <value>
                <fullName>ar_KW</fullName>
            </value>
            <value>
                <fullName>ar_LB</fullName>
            </value>
            <value>
                <fullName>ar_LY</fullName>
            </value>
            <value>
                <fullName>ar_MA</fullName>
            </value>
            <value>
                <fullName>ar_OM</fullName>
            </value>
            <value>
                <fullName>ar_QA</fullName>
            </value>
            <value>
                <fullName>ar_SA</fullName>
            </value>
            <value>
                <fullName>ar_SD</fullName>
            </value>
            <value>
                <fullName>ar_SY</fullName>
            </value>
            <value>
                <fullName>ar_TN</fullName>
            </value>
            <value>
                <fullName>ar_AE</fullName>
            </value>
            <value>
                <fullName>ar_YE</fullName>
            </value>
            <value>
                <fullName>hy_AM</fullName>
            </value>
            <value>
                <fullName>az_AZ</fullName>
            </value>
            <value>
                <fullName>bn_BD</fullName>
            </value>
            <value>
                <fullName>eu_ES</fullName>
            </value>
            <value>
                <fullName>be_BY</fullName>
            </value>
            <value>
                <fullName>bs_BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>