force-app/main/default/objects/Country__mdt/fields/COU_PCK_mandatoryPurpose__c.field-meta.xml
<CustomField>
    <fullName>COU_PCK_mandatoryPurpose__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mandatory purpose</label>
    <type>Checkbox</type>
</CustomField>