force-app/main/default/objects/Country__mdt/fields/COU_PCK_preferreAccountType__c.field-meta.xml
<CustomField>
    <fullName>COU_PCK_preferreAccountType__c</fullName>
    <label>Preferred Account type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IBA</fullName>
                <default>true</default>
                <label>IBA</label>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>