force-app/main/default/objects/Country__mdt/fields/COU_PCK_signatureHeader__c.field-meta.xml
<CustomField>
    <fullName>COU_PCK_signatureHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Header</label>
    <type>Checkbox</type>
</CustomField>