force-app/main/default/objects/Country__mdt/fields/PAY_CHK_IIP_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>PAY_CHK_IIP_Beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si es true, el pais aparece en el dropdown en el paso 2 del proceso del pago.</description>
    <label>IIP Beneficiary</label>
    <type>Checkbox</type>
</CustomField>