force-app/main/default/objects/Country__mdt/listViews/ALL_DATA.listView-meta.xml
<ListView>
    <fullName>ALL_DATA</fullName>
    <columns>MasterLabel</columns>
    <columns>COU_PCK_ISO_Code2__c</columns>
    <columns>DeveloperName</columns>
    <columns>COU_PCK_CurrencyCode__c</columns>
    <columns>COU_PCK_Locale__c</columns>
    <columns>COU_PCK_Language__c</columns>
    <columns>COU_PCK_Timezone__c</columns>
    <columns>COU_PCK_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL DATA</label>
    <language>en_US</language>
</ListView>